<resources>
    <string name="app_name">CodeCrack</string>
    <string name="title" translatable="false">&lt;CodeCrack/&gt;</string>
    <string name="description">Select a programming language</string>
    <string name="about_text">App made with love</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_scoreboard">Scoreboard</string>
    <string name="nav_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Game</string>

    <string name="pref_title_save_score">Save score online</string>
    <string name="pref_description_save_score">
        Save score online with public visibility
    </string>

    <string name="pref_title_user_name">User name</string>
    <string name="pref_default_display_name">Anonymous</string>

    <string name="pref_title_difficulty">Game difficulty</string>
    <string-array name="pref_list_difficulty">
        <item>Easy (3 min.)</item>
        <item>Medium (2 min.)</item>
        <item>Hard (1 min.)</item>
    </string-array>
    <string-array name="pref_list_difficulty_values">
        <item>180</item>
        <item>120</item>
        <item>60</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="nav_about">About</string>

    <string name="title_java">Java</string>
    <string name="title_php">PHP</string>
    <string name="title_js">JavaScript</string>
    <string name="title_html">HTML</string>

    <string name="title_activity_scoreboard">Scoreboard</string>
    <string name="no_scores">No scores found…</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="live_scoreboard">Live Scoreboard</string>
</resources>
