<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
                android:id="@+id/nav_scoreboard"
                android:icon="@drawable/ic_equalizer_black_24dp"
                android:title="@string/nav_scoreboard"/>
        <item
                android:id="@+id/nav_live"
                android:icon="@drawable/ic_equalizer_black_24dp"
                android:title="@string/live_scoreboard"/>
        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/nav_settings"/>
    </group>

    <item android:title="@string/nav_about">
        <menu>
            <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_info_outline_black_24dp"
                    android:title="@string/nav_about"/>
        </menu>
    </item>

</menu>
